# spdlog

src/: CMakeLists.txt  main  main.cpp  main2.cpp  spdlog_interface.h
